--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,31 @@
+/*exemple prefixe vendors par default en css
+.article{
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+/* Firefox 1-3.6 */
+/* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
 body {
-  background-color: LightGreen; }
+  background-color: #98ADC6; }
+
+h1 {
+  text-align: center;
+  margin: 50px 0 20px 0;
+  color: #BF6A4F; }
 
 p {
-  color: LightCoral; }
+  color: #594E45; }
+
+.demo {
+  width: 400px;
+  height: 400px;
+  padding: 10px;
+  margin: 50px 0 20px 0;
+  background-color: #594E45;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px; }
+  .demo h2 {
+    max-resolution: 50px 0 20px 0; }
+  .demo p {
+    color: #B4DBCB; }
 
 /*# sourceMappingURL=style.css.map */
