--- a/css/style.css
+++ b/css/style.css
@@ -14,18 +14,19 @@ h1 {
 p {
   color: #594E45; }
 
-.demo {
+.demo, .demo2 {
   width: 400px;
   height: 400px;
   padding: 10px;
   margin: 50px 0 20px 0;
   background-color: #594E45;
+  display: inline-block;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px; }
-  .demo h2 {
+  .demo h2, .demo2 h2 {
     max-resolution: 50px 0 20px 0; }
-  .demo p {
+  .demo p, .demo2 p {
     color: #B4DBCB; }
 
 /*# sourceMappingURL=style.css.map */
